# gems

./: .gitignore  Makefile.am  README  README.md  autogen.sh  common.gypi  configure.ac  gems.gyp  gyp_configure  options.gypi
dat/: GLYCAM_06h.prep
docs/: Makefile  gems.js
examples/: build.js  ff99SB.js  geometry.js  glycam_sequence.js  glycoprotein.js  load_pdb.js  residues.js  robert.js  solvate.js  structure.js  write_pdb.js
src/: atom.cc  atom.h  atom_module.cc  atom_module.h  basic_test.js  build.cc  build.h  coordinate.cc  coordinate.h  element.cc  element.h  environment.cc  environment.h  environment_module.cc  environment_module.h  file_io.cc  file_io.h  gems.cc  gems.h  glycam.cc  glycam.h  glycam_module.cc  glycam_module.h  pdb.cc  pdb.h  pdb_module.cc  pdb_module.h  pdb_structure.cc  pdb_structure.h  prep_file_module.cc  prep_file_module.h  residue.cc  residue.h  residue_module.cc  residue_module.h  shell.cc  shell.h  structure.cc  structure.h  structure_module.cc  (+1 more)
src/js/: atom.js  atom_module.js  core.js  environment.js  environment_module.js  glycam.js  glycam_module.js  pdb.js  pdb_module.js  prep_file_module.js  residue_module.js  structure.js  structure_module.js  utils.js
talk/: 01.js  02.js  03.js  04.js  05.js  06.js  07.js  08.js  09.js  10.js  11.js  12.js  13.js  14.js  15.js  Makefile  glycam.js  leaprc.GLYCAM_06  solvated_min.in
talk/dat/: Neu5Gc_a_06.prep  sulfate.prep
tools/: run_gyp
